# picross-generator

./: .gitignore  README.md  dev-requirements.txt  requirements.txt  setup.cfg
picross_generator/: __main__.py
picross_generator/image_readers/: FileNameFilter.py  ImageMatrixBuilder.py  ImageReader.py
picross_generator/model/: Image.py  ImageMatrix.py  RowColumnMetadata.py
picross_generator/output_generators/: CsvOutputGenerator.py  YardstickOutputGenerator.py
