[metadata]
name = picross_generator
version = attr:picross_generator.__VERSION__
description = A program for generating picross clues for a given image
long_description = file: README.md
keywords = starter, template, python
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
entry_points = picross_generator
packages = picross_generator